<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            tools:context=".fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/profileDp"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/dp"
            tools:ignore="ContentDescription"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/opensanssemibold"
            android:text="@string/enter_the_details"
            android:textColor="#2E4058"
            android:textSize="25sp"
            tools:targetApi="o"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profileMobile"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:errorEnabled="true"
            tools:targetApi="o">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profileName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            app:counterEnabled="true"
            app:errorEnabled="true"
            tools:targetApi="o">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profilePassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:visibility="gone"
            app:counterEnabled="true"
            app:counterMaxLength="12"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            tools:targetApi="o">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profileHouseNO"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            app:counterEnabled="true"
            app:errorEnabled="true"
            tools:targetApi="o">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="10dp"
            android:prompt="@string/prompt_state"
            tools:targetApi="o"/>

        <Spinner
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="10dp"
            android:prompt="@string/prompt_city"
            tools:targetApi="o"/>

        <Spinner
            android:id="@+id/localitySpinner"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="10dp"
            android:prompt="@string/prompt_city"
            tools:targetApi="o"/>

        <Button
            android:id="@+id/editProfileBtn"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/edit_profile"
            android:textSize="15sp"/>
    </LinearLayout>
</ScrollView>